添加测试文件

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"gulp-uglify":"*",
 		"gulp-less":"*",
 		"gulp-watch":"*",
-		"gulp-browserify":""
+		"gulp-browserify":"*",
+		"gulp-copy":"*"
 	}
 }
